--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 FLASK_APP=autoapp.py
 FLASK_DEBUG=1
 FLASK_ENV=development
-DATABASE_URL=postgresql://developer@127.0.0.1:5432/flaskdeliveryapp
+DATABASE_URL=postgresql://developer@127.0.0.1:5432/rype
 GUNICORN_WORKERS=1
 LOG_LEVEL=debug
 SECRET_KEY=not-so-secret
