--- a/Pipfile
+++ b/Pipfile
@@ -8,39 +8,35 @@ name = "pypi"
 Flask = "==1.1.1"
 Werkzeug = "==0.16.0"
 click = ">=5.0"
-
+flask_bootstrap = "*"
+flask_kvsession = "*"
+flask_moment = "*"
+flask_script = "*"
 # Database
 Flask-SQLAlchemy = "==2.4.1"
 SQLAlchemy = "==1.3.10"
 psycopg2-binary = "==2.8.4"
-
 # Migrations
 Flask-Migrate = "==2.5.2"
-
 # Forms
 Flask-WTF = "==0.14.2"
 WTForms = "==2.2.1"
-
 # Deployment
 gevent = "==1.4.0"
 gunicorn = ">=19.1.1"
 supervisor = "==4.1.0"
-
 # Webpack
 flask-webpack = "==0.1.0"
-
 # Auth
 Flask-Login = "==0.4.1"
 Flask-Bcrypt = "==0.7.1"
-
 # Caching
 Flask-Caching = ">=1.0.0"
-
 # Debug toolbar
 Flask-DebugToolbar = "==0.10.1"
-
 # Environment variable parsing
 environs = "==6.1.0"
+forgerypy3 = "*"
 
 [dev-packages]
 # Testing
@@ -48,7 +44,6 @@ pytest = "==5.2.2"
 WebTest = "==2.0.33"
 factory-boy = "==2.12.*"
 pdbpp = "==0.10.2"
-
 # Lint and code style
 black = "==19.10b0"
 flake8 = "==3.7.9"
